# BVCscrap

./: pyproject.toml  setup.py
BVCscrap/: Notation.py  load.py  tech.py  utils.py
